# tcc

./: README.md
checker/: .gitignore  Cargo.toml  flake.nix
checker/benchmark/: old_run_benchmarks.py  run_all_benchmarks.py  run_benchmarks.py  run_plots.py  run_statistical_tests.py
checker/data/: bad_order.py  bakery.py  brp2.py  coi_chaos_killer.py  coi_killer.py  counter.py  dining.py  elevator2.py  find_max_n.py  firewire_link.py  fischer.py  gen_data.py  mcs.py  rule30.py  sokoban.py  synapse.py  train_gate.py
checker/examples/: benchmark.nusmv  chest.lab  chest.nm  chest.smv  chest.spec  chest.tra  generate_examples.py  order.txt  sem.lab  sem.spec  sem.sta  sem.tra  token_ring.smv
checker/src/: cli.rs  ctl.pest  formula.rs  io.rs  kripke_structure.rs  labelling.rs  lib.rs  main.rs  model.rs  parser.rs
checker/src/algorithms/: bdd_fixpoint.rs  labelling.rs  labelling_scc.rs  mod.rs
checker/src/core/: bdd.rs  kripke_structure.rs  mod.rs
checker/src/io/: load_formulas.rs  load_pnml_fsm.rs  load_prism_fsm.rs  mod.rs  read_order_file.rs
checker/src/modeling/: ast.rs  bdd_compiler.rs  expansion.rs  mod.rs  ordering.rs  ssmv.pest  ssmv_ast.rs  ssmv_parser.rs  symbolic.rs
checker/src/specs/: ctl.pest  ctl_formula.rs  ctl_parser.rs  mod.rs
checker/tests/: verification.rs  verification_scc.rs
doc/: .gitignore  flake.nix  main.tex  references.bib
tests/: chest_v1.smv  semafaro.smv
