[package]
name = "checker"
version = "0.1.0"
edition = "2024"
authors = ["Nicolas A. N. S"]

[dependencies]
petgraph = "0.6"
thiserror = "1.0"
logos = "0.14"
pest = "2.8.6"
pest_derive = "2.8.6"
colored = "3.1.1"
fixedbitset = "0.5.7"

#quick-xml = "0.39.2"
clap = { version = "4.6", features = ["derive"] }


[dev-dependencies]
assert_matches = "1.5"
