[package]
name = "checker"
version = "0.1.0"
edition = "2024"
authors = ["Nicolas A. N. S"]

[dependencies]
#petgraph = "0.6"
thiserror = "1.0"
logos = "0.14"
pest = "2.8.6"
pest_derive = "2.8.6"
colored = "3.1.1"
fixedbitset = "0.5.7"
memory-stats = "1.2.0"
rand = "0.10.1"
rand_chacha = "0.10.0"
oxidd = { version = "0.11.0", default-features = false, features = [
    "bdd",
    "bcdd",
    "zbdd",
    "manager-index",
    "apply-cache-direct-mapped",
    "dddmp",
    "dot-export"
] }

#quick-xml = "0.39.2"
clap = { version = "4.6", features = ["derive"] }


[dev-dependencies]
assert_matches = "1.5"
